# rpi_led_matrix

./: Cargo.toml  README.md  Robot-Head-Main-1.5.1.pd  build_debug_opt.sh  build_macos_to_rpi.sh  install_debian.sh  rpi_set_ip.sh
.cargo/: config.toml
src/: RLock.rs  audio.rs  cli.rs  draw.rs  main.rs  mapping.rs  matrix_mapping.rs  pd_receive.rs  previs_ui.rs  strip_mapping.rs
