[package]
name = "rpi_led_matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artnet_protocol = "0.4.1"
clap = { version = "4.1.4", features = ["derive"] }
eframe = "0.20.1"
egui = {version="0.20.1", features=["mint"]}
glam = {version="0.22.0", features=["mint"]}
jack = "0.11.3"
palette = "0.6.1"
pv_recorder = "1.1.0"
spin_sleep = "1.1.1"
winit = "0.27.5"
