[package]
name = "rpi_led_matrix"
version = "0.1.0"
edition = "2021"

[features]
gui = ["dep:egui", "dep:egui-multiwin"]
jack = ["dep:jack"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artnet_protocol = "0.4.1"
clap = { version = "4.1.4", features = ["derive"] }
palette = "0.6.1"
# pv_recorder = "1.1.0"
spin_sleep = "1.1.1"

jack = {version="0.11.3", optional=true}

# eframe = {version="0.20.1", optional=true}
egui = {version="0.20.1", features=["mint"], optional=true}
ecolor = "0.20.0"
glam = { version = "0.22.0", features = ["mint"] }
noise = "0.8.2"
egui-multiwin = {version="0.1.2", optional=true}
enum_dispatch = "0.3.11"
